fixed clipping and improved readability

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  height: 100vh;
+  height: 120vh;
   min-height: 820px;
   background: url("../img/background.jpg");
   box-sizing: border-box;
